# build_GraphAlgorithm

./: .gitignore  CMakeLists.txt  README.md
cmake/: ZGRAPHConfig.cmake.in
include/: zgraph.h
src/: zgraph.c
test/: test-graph.c
test/help_test/: alloc-testing.c  alloc-testing.h  framework.c
